--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
-asgiref==3.4.1
-Django==3.2.5
-pytz==2021.1
-sqlparse==0.4.1
+asgiref
+Django
+pytz
+sqlparse
 Pillow
 social-auth-app-django
 django-environ
 requests
 psycopg2-binary
+django-debug-toolbar
+django-debug-toolbar-template-profiler
+django-extensions
+pydotplus
+graphviz
+locust
